--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,26 @@
-<h1>This is the users:ID page</h1>
+<div class="user_posts">
+  <div class="user_profile">
+     <img src="<%= @user.photo %>" alt="user_pic" />
+     <div>
+        <p><%= @user.name %></p>
+        <p class="posts_count">Number of posts: <%= @user.posts_counter || 0 %></p>
+     </div>
+  </div>
+  <div class="user_bio">
+    <p><%= @user.bio || "no Bio provided by the user" %></p>
+  </div>
+  <ul>
+    <% @post.each do |post| %>
+      <% if @post.empty? %>
+        <p>User doesn't have posts yet</p>
+      <% else %>
+        <div>
+            <h2><%= post.title %></h2>
+            <p><%= post.text %></p>
+            <h3>Comment <%= post.comments.count%>,  <span>Likes <%= post.likes.count%></span></h3>
+        </div>
+      <% end %>
+    <% end %>
+  </ul>
+  <button>See all posts</button>
+</div>
