--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,3 @@
-<ul class="users-list">
-  <% @users.each do |user| %>
-    <li>
-      <ul>
-        <li>
-          <img src="<%= user.photo %>" alt="user_pic" />
-        </li>
-        <li>
-          <%= user.name %>
-          <p class="posts_count">Number of posts: <%= user.posts_counter || 0 %></p>
-        </li>
-      </ul>
-    </li>
-  <% end %>
-</ul>
+<% @users.each do |user| %>
+  <%= render "profil", user: user %>
+<% end %>
