--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,8 +2,12 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
-  text-decoration: none;
   font-weight: 600;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .users-list {
