--- a/app/views/users/_profil.html.erb
+++ b/app/views/users/_profil.html.erb
@@ -2,7 +2,7 @@
   <div class="user">
     <img src="<%= user.photo %>" alt="user_pic" />
     <div class="user-name">
-      <h2><%= user.name %></h2>
+      <h2><%= link_to user.name, user_path(user.id) %></h2>
       <p class="posts_count">Number of posts: <%= user.posts_counter || 0 %></p>
     </div>
   </div>
