--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,5 +17,5 @@
       <% end %>
     <% end %>
   </div>
-  <button class="border">See all posts</button>
+  <button class="border"><%= link_to 'See all posts', user_posts_path(@user) %></button>
 </div>
