--- a/app/views/helpers/_like_form.html.erb
+++ b/app/views/helpers/_like_form.html.erb
@@ -1,3 +1,3 @@
 <%= form_with model: @like, url: "/users/#{@user.id}/posts/#{@post.id}/likes", scope: :like  do |form| %>
-  <button type="submit" class='like-btn'>Like</button>
+  <%= form.submit "Like" %>
 <%end%>
