--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
       <% end %>
     <% end %>
   </div>
-  <div>
+  <div class="border comment_link">
     <%= link_to "Add a comment", new_user_post_comment_path(post_id: @post.id) %>
   </div>
 </div>
