--- a/app/views/helpers/_post_form.html.erb
+++ b/app/views/helpers/_post_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @post, url: user_posts_path(@user.id), scope: :post do |form| %>
+<%= form_with model: @post, url: user_posts_path, scope: :post do |form| %>
   <div>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
