--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -129,6 +129,7 @@ a {
   min-height: 300px;
   padding: 1rem;
   margin-bottom: 5px;
+  position: relative;
 }
 
 .post_header {
@@ -151,4 +152,13 @@ a {
   width: 150px;
   text-align: center;
   margin-top: 1rem;
+}
+
+.like-btn {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  margin-top: 1rem;
+  width: 80px;
+  padding: 6px;
 }
