--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,7 @@
       </p>  
     </div>
     <%= form_with model: @like, url: user_post_likes_path(post_id: @post.id) do |form| %>
-      <%= form.submit "Like" %>
+      <%= form.submit "Like", class: "like-btn border" %>
     <%end%>
   </div>
   <div class="comments border">
