--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,10 +3,21 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  <div class="field mb-2">
+      <%= f.label :name %><br />
+      <%= f.text_field :name, placeholder: 'Enter your full name' %>
+    </div>
+  
+    <div class="field mb-2">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Enter your email' %>
+    </div>
+  
+    <div class="area mb-2">
+      <%= f.label :Bio %><br />
+      <%= f.text_area :bio, placeholder: 'Enter a description about you' %>
+    </div>
+  
 
   <div class="field">
     <%= f.label :password %>
