--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,8 +17,12 @@
       <%= f.label :Bio %><br />
       <%= f.text_area :bio, placeholder: 'Enter a description about you' %>
     </div>
-  
 
+    <div class="form-group mb-3">
+      <%= f.label :photo %>
+      <%= f.text_field :photo, class: "form-control" %>
+    </div>
+  
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
