--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,44 +1,37 @@
-<h2>Sign up</h2>
+<div class="form_container">
+  <h2 class="form_title">Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field mb-2">
-      <%= f.label :name %><br />
-      <%= f.text_field :name, placeholder: 'Enter your full name' %>
-    </div>
-  
     <div class="field mb-2">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Enter your email' %>
+        <%= f.text_field :name, placeholder: 'Enter your full name', class: "input_form border" %>
+      </div>
+    
+      <div class="field mb-2">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Enter your email', class: "input_form border" %>
+      </div>
+    
+      <div class="area mb-2">
+        <%= f.text_area :bio, placeholder: 'Enter a description about you', class: "input_form border", placeholder: 'photo link' %>
+      </div>
+
+      <div class="field mb-3">
+        <%= f.text_field :photo, class: "input_form border", placeholder: 'photo link' %>
+      </div>
+    
+    <div class="field">
+      <%= f.password_field :password, autocomplete: "new-password", class: "input_form border", placeholder: 'Enter password' %>
     </div>
-  
-    <div class="area mb-2">
-      <%= f.label :Bio %><br />
-      <%= f.text_area :bio, placeholder: 'Enter a description about you' %>
+
+    <div class="field">
+      <%= f.password_field :password_confirmation, placeholder: 'Enter password', autocomplete: "new-password", class: "input_form border" %>
     </div>
 
-    <div class="form-group mb-3">
-      <%= f.label :photo %>
-      <%= f.text_field :photo, class: "form-control" %>
+    <div class="actions">
+      <%= f.submit "Sign up", class: "input_btn border btn" %>
     </div>
-  
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+  <% end %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
