--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,9 @@
-<h1>Welcome to my blog App</h1>
-<% @users.each do |user| %>
-  <%= render "profil", user: user %>
-<% end %>
+<div class="users_container">
+<div>
+  <h1>Welcome to my blog App</h1>
+  <button class="button border">Sign In</button>
+</div>
+  <% @users.each do |user| %>
+    <%= render "profil", user: user %>
+  <% end %>
+</div>
