Change bio placeholder

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
       </div>
     
       <div class="area mb-2">
-        <%= f.text_area :bio, placeholder: 'Enter a description about you', class: "input_form border", placeholder: 'photo link' %>
+        <%= f.text_area :bio, placeholder: 'Enter a description about you', class: "input_form border", placeholder: 'Add you bio' %>
       </div>
 
       <div class="field mb-3">
