--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,11 @@ a {
   cursor: pointer;
 }
 
+.users_container h1 {
+  text-align: center;
+  margin: 1rem;
+}
+
 .users-list {
   display: flex;
   flex-direction: column;
