--- a/app/views/helpers/_post_form.html.erb
+++ b/app/views/helpers/_post_form.html.erb
@@ -1,15 +1,15 @@
-<%= form_with model: @post, url: user_posts_path, scope: :post do |form| %>
-  <div>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
-  </div>
+<div class="form_container">
+  <%= form_with model: @post, url: user_posts_path, scope: :post do |form| %>
+    <div>
+      <%= form.text_field :title, placeholder: 'Enter your title', class: "input_form border" %>
+    </div>
 
-  <div>
-    <%= form.label :text %><br>
-    <%= form.text_area :text %><br>
-  </div>
+    <div>
+      <%= form.text_area :text, placeholder: 'Enter your title', class: "input_form border" %><br>
+    </div>
 
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+    <div  class= "input_btn border btn">
+      <%= form.submit %>
+    </div>
+  <% end %>
+</div>
